force-app/main/default/objects/Contracted_Price__c/Contracted_Price__c.object-meta.xml
<CustomObject>
    <label>Contracted Price</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Contracted Price No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracted Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>