force-app/main/default/objects/Contracted_Price__c/fields/OTC__c.field-meta.xml
<CustomField>
    <fullName>OTC__c</fullName>
    <label>OTC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>