force-app/main/default/objects/Contracted_Price__c/fields/Recurring_Charge__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charge__c</fullName>
    <label>Recurring Charge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>